# ghostty-voice

./: .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  IDEAS.md  Makefile  PKGBUILD  PLAN.md  README.md  VALIDATION.md  config.toml.example  ghostty-voice.install
backlog/: config.yml
backlog/tasks/: task-1 - S1-—-Walking-skeleton-speak-→-text-typed-into-Ghostty.md  task-10 - PRD-talk-to-operability-—-make-wrapper-sink-delivery-legible.md  task-10.1 - status-report-the-active-Delivery-sink-registered-wrapper-count.md  task-10.2 - talk-to-distinguish-connection-states-on-the-strip-log-the-reason.md  task-10.3 - protocol-version-handshake-to-detect-report-an-incompatible-daemon.md  task-10.4 - docs-talk-to-verification-troubleshooting-guide.md  task-11 - PRD-talk-to-multi-wrapper-correctness-—-deterministic-active-sink-lifecycle.md  task-11.1 - sink-newest-live-handoff-on-deregister-pure-test-first.md  task-11.2 - daemon-integration-coverage-of-wrapper-handoff-CONTEXT.md-update.md  task-12 - PRD-talk-to-packaging-release-reliability.md  task-12.1 - packaging-make-the-upgrade→daemon-restart-requirement-reliable-legible.md  task-12.2 - release-repeatable-AUR-release-procedure-binary-completeness-guard.md  task-13 - PRD-report-model-download-progress-on-the-talk-to-strip-status-drop-notify-send.md  task-13.1 - protocol-fold-download-percent-into-State-DownloadingOption-u8-render.md  task-13.2 - daemon-stream-real-download-progress-into-State-drop-download-notify-send.md  task-13.3 - docs-README-first-run-download-progress-on-strip-status.md  task-14 - PRD-talk-to-as-the-sole-interface-—-remove-global-hotkeys-the-focused-window-sink.md  task-14.1 - remove-the-focused-window-ydotool-sink-—-the-wrapper-sink-is-the-only-Delivery-sink.md  task-14.2 - relocate-ShiftF9-F10-triggers-into-talk-to-remove-the-daemons-global-evdev-listener.md  task-15 - dev-workflow-fast-local-iteration-loop-ghostty-voice-git-PKGBUILD-and-upgrade-tolerant-config-parsing.md  task-16 - PRD-dev-install-tool-—-copy-based-install-with-config-drift-guard-and-a-clean-option.md  task-16.1 - dev-install-copy-based-install-path-build-→-copy-binaries-to-usr-bin-→-restart-retire-symlink-override.md  task-16.2 - dev-install-config-drift-guard-—-compare-repo-vs-installed-prompt-to-overwrite-decline-aborts-before-binaries.md  task-16.3 - dev-install-clean-option-to-wipe-XDG-user-state-config-share-model-cache-state.md  task-17 - PRD-architecture-deepening-—-name-the-domain-in-code-Recorder-Delivery-shared-transcribe-managed-child.md  task-17.1 - managed-child-seam-—-unify-external-process-spawning-with-clean-termination.md  (+26 more)
crates/ghostty-voice/: Cargo.toml
crates/ghostty-voice-core/: Cargo.toml
crates/ghostty-voice-io/: Cargo.toml
crates/ghostty-voice-io/src/: audio.rs  cache.rs  cue.rs  download.rs  inject.rs  input.rs  lib.rs  transcribe.rs
crates/ghostty-voice/src/: audio.rs  main.rs  transcribe.rs
crates/ghostty-voiced/: Cargo.toml
crates/ghostty-voiced/src/: main.rs  vulkan_enum.rs
crates/ghostty-voiced/tests/: accuracy_pipeline.rs  download_progress.rs  held_for_replay.rs  incompatible_daemon.rs  ordered_drain.rs  release_guard.rs  sink_registration.rs  status_report.rs  streaming_decode.rs  wrapper_delivery.rs  wrapper_handoff.rs
crates/talk-to/: Cargo.toml
crates/talk-to/src/: main.rs
docs/: streaming-dictation-afk-goal.md
packaging/: PKGBUILD  RELEASE.md  check-package-binaries.sh  dev-install.sh  dev-setup.sh  ghostty-voice.install
scripts/: mic-level.py  mic-level.sh
(+44 files in other folders)
