[package]
name = "ghostty-voice-io"
version = "0.0.0"
edition.workspace = true
publish.workspace = true

[dependencies]
ghostty-voice-core = { path = "../ghostty-voice-core" }
anyhow = "1.0.102"
nix = { version = "0.31.3", features = ["signal"] }
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "multipart"] }
