[package]
name = "ghostty-voiced"
version = "0.0.0"
edition.workspace = true
publish.workspace = true

[[bin]]
name = "ghostty-voiced"
path = "src/main.rs"

[dependencies]
ghostty-voice-core = { path = "../ghostty-voice-core" }
ghostty-voice-io = { path = "../ghostty-voice-io" }
anyhow = "1.0.102"
tokio = { version = "1.52.3", default-features = false, features = ["rt-multi-thread", "net", "signal", "sync", "macros", "time", "process", "io-util"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
nix = { version = "0.31.3", features = ["signal"] }
